--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,11 @@
 The revision history of webNI
 
 What will change in next version
+  Support get depth map?
+
+2013/04/30 v0.3
   Support get single joint data of user
-
-
+ 
 2013/04/18 v0.2
   Support set VideoMode of dpeth map when start the server
   Modify the return data of user list
